fixed mocks for valid non existent ids